# simpler

.claude/commands/: perf-example-device.md  perf-runtime-device.md
.claude/lib/github/: checkout-fork-branch.md  detect-permission.md
.claude/skills/address-pr-comments/: SKILL.md
.claude/skills/benchmark-pr/: SKILL.md
.claude/skills/checkout-pr/: SKILL.md
.claude/skills/github-pr/: SKILL.md
examples/host_build_graph/paged_attention/: golden.py
examples/scripts/: code_runner.py  run_example.py
examples/tensormap_and_ringbuffer/batch_paged_attention/: golden.py
examples/tensormap_and_ringbuffer/paged_attention/: golden.py
golden/: paged_attention_golden.py
python/: bindings.py  kernel_compiler.py  runtime_compiler.py  toolchain.py
src/a2a3/platform/include/host/: pto_runtime_c_api.h
src/a2a3/platform/onboard/aicore/: inner_kernel.h
src/a2a3/platform/onboard/aicpu/: CMakeLists.txt
src/a2a3/platform/onboard/host/: CMakeLists.txt  device_runner.cpp  host_regs.cpp  pto_runtime_c_api.cpp
src/a2a3/platform/sim/aicore/: inner_kernel.h
src/a2a3/platform/sim/host/: pto_runtime_c_api.cpp
src/a2a3/runtime/aicpu_build_graph/aicore/: aicore_executor.cpp
src/a2a3/runtime/aicpu_build_graph/aicpu/: aicpu_executor.cpp
src/a2a3/runtime/host_build_graph/aicore/: aicore_executor.cpp
src/a2a3/runtime/tensormap_and_ringbuffer/aicore/: aicore_executor.cpp
src/a2a3/runtime/tensormap_and_ringbuffer/aicpu/: aicpu_executor.cpp
src/a2a3/runtime/tensormap_and_ringbuffer/host/: runtime_maker.cpp
src/a2a3/runtime/tensormap_and_ringbuffer/runtime/: pto_orchestrator.cpp  pto_orchestrator.h  pto_ring_buffer.cpp  pto_ring_buffer.h  pto_runtime2_types.h  pto_scheduler.h  pto_tensormap.cpp  pto_tensormap.h
src/a5/platform/onboard/aicore/: inner_kernel.h
src/a5/platform/sim/aicore/: inner_kernel.h
src/a5/runtime/host_build_graph/aicore/: aicore_executor.cpp
src/a5/runtime/tensormap_and_ringbuffer/aicore/: aicore_executor.cpp
src/a5/runtime/tensormap_and_ringbuffer/runtime/: pto_orchestrator.cpp  pto_orchestrator.h  pto_ring_buffer.h  pto_runtime2_types.h
tests/device_tests/a2a3/tensormap_and_ringbuffer/batch_paged_attention/kernels/aic/: aic_qk_matmul.cpp
tests/device_tests/a2a3/tensormap_and_ringbuffer/batch_paged_attention/kernels/aiv/: aiv_online_update.cpp  aiv_softmax_prepare.cpp
tests/device_tests/a2a3/tensormap_and_ringbuffer/batch_paged_attention/kernels/orchestration/: paged_attention_orch.cpp
tests/device_tests/a2a3/tensormap_and_ringbuffer/paged_attention/: golden.py
tests/device_tests/a2a3/tensormap_and_ringbuffer/paged_attention/kernels/aic/: aic_pv_matmul.cpp  aic_qk_matmul.cpp
tests/device_tests/a2a3/tensormap_and_ringbuffer/paged_attention/kernels/aiv/: aiv_online_update.cpp  aiv_softmax_prepare.cpp
tests/device_tests/a2a3/tensormap_and_ringbuffer/paged_attention_unroll/kernels/aic/: aic_pv_matmul.cpp  aic_qk_matmul.cpp
tests/device_tests/a2a3/tensormap_and_ringbuffer/paged_attention_unroll/kernels/aiv/: aiv_online_update.cpp  aiv_softmax_prepare.cpp
tests/device_tests/aicpu_build_graph/paged_attention/: golden.py
tests/device_tests/host_build_graph/paged_attention/: golden.py
tests/device_tests/tensormap_and_ringbuffer/batch_paged_attention/: golden.py
tests/device_tests/tensormap_and_ringbuffer/paged_attention/: golden.py
tests/device_tests/tensormap_and_ringbuffer/paged_attention_unroll/: golden.py
tests/device_tests/tensormap_and_ringbuffer/paged_attention_unroll/kernels/: kernel_config.py
tests/device_tests/tensormap_and_ringbuffer/paged_attention_unroll/kernels/aic/: aic_pv_matmul.cpp  aic_qk_matmul.cpp
tests/device_tests/tensormap_and_ringbuffer/paged_attention_unroll/kernels/aiv/: aiv_hub.cpp  aiv_online_update.cpp  aiv_softmax_prepare.cpp
tests/device_tests/tensormap_and_ringbuffer/paged_attention_unroll/kernels/orchestration/: paged_attention_orch.cpp
